<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigureUrlsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/configureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/configure_urls"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/serverUrlLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@+id/serverUrl"
            android:text="@string/application_server_url"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/serverUrl"
            app:layout_constraintTop_toBottomOf="@+id/configureTitle" />

        <EditText
            android:id="@+id/serverUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:autofillHints="Application Server URL"
            android:ems="10"
            android:inputType="textUri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serverUrlLabel"
            tools:text="http://localhost:6080" />

        <TextView
            android:id="@+id/livekitUrlLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/livekitUrl"
            android:text="@string/livekit_url"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/livekitUrl"
            app:layout_constraintTop_toBottomOf="@+id/serverUrl" />

        <EditText
            android:id="@+id/livekitUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:autofillHints="LiveKit URL"
            android:ems="10"
            android:inputType="textUri"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/livekitUrlLabel"
            tools:text="http://localhost:7880" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/save"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/livekitUrl" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
